# Efficient-Hprof

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  Timings.txt  run-bench-marks.sh
Test/Correct-Implementation/: script.py
Test/Correct-Implementation/Hprof-Agent/: CMakeLists.txt  README.md
Test/Correct-Implementation/Hprof-Agent/src/: hprof.h  hprof_class.c  hprof_io.c  hprof_reference.c  hprof_site.c  hprof_tag.c  hprof_tls.c  hprof_tls.h
Test/DaCapo-Benchmarks-Tests/: Results.ods  run-bench-marks.sh
Test/Java-benchmarks-Tests/Case-Study/src/: Calculate.java
Test/Java-benchmarks-Tests/Precise-Test/src/: ObjectTest.java  RatioTest.java
benchmarks/: Results.ods  run-bench-marks.sh
benchmarks/Class Tests/: Test.java  java.hprof.txt
benchmarks/Class Tests/src/: Calculate.java  Demo.java  java.hprof.txt
benchmarks/CorrectImplementationTest/: script.py
docs/Dissertation/: Hprof_works.txt
example/: Hello.java
src/: hprof.h  hprof_class.c  hprof_class.h  hprof_event.c  hprof_frame.c  hprof_frame.h  hprof_init.c  hprof_io.c  hprof_io.h  hprof_md.h  hprof_object.c  hprof_object.h  hprof_reference.c  hprof_site.c  hprof_site.h  hprof_tag.c  hprof_tag.h  hprof_tls.c  hprof_tls.h  hprof_trace.c  hprof_trace.h  hprof_tracker.c  hprof_tree.c  hprof_tree.h  hprof_trie.c  hprof_trie.h  hprof_vector.c  hprof_vector.h
trie_temp/: CMakeLists.txt
trie_temp/src/: main.c  new_trie.c  new_trie.h
